# esp32touch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig
components/: CMakeLists.txt
components/graphics/: CMakeLists.txt  ui.c  ui_controls.c
components/graphics/include/: ft236_touch.h  ui.h  ui_controls.h
components/hardware/: CMakeLists.txt  display.c  display.h  ft236_touch.c  i2cTools.c  max1726x.c  max1726x.h  sdcard.c
components/hardware/include/: backlight.h  display.h  i2cTools.h  sdcard.h
components/tjpgd/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  decode_image.c  fuelgauge.c  http_server.c  image.c  main.c  music.c  status_bar.c  touch.c
main/include/: decode_image.h  http_server.h  image.h  touch.h
