idf_component_register(SRCS
                            "ui.c"
                            "ui_controls.c"
                            "graphics.c"
                            "OpenSans_Regular_11X12.c"
                            "tf.c"
                      INCLUDE_DIRS "include"
                      REQUIRES hardware
                )
